# DevOps-Core-Course

./: .gitignore  README.md
.github/workflows/: ansible-deploy.yml  python-ci.yml  rust-ci.yml  terraform-ci.yml
ansible/: .ansible-lint  README.md
ansible/docs/: LAB05.md  LAB06.md
ansible/group_vars/: all.yml
ansible/inventory/: hosts.ini  hosts.local.ini
ansible/playbooks/: deploy-monitoring.yml  deploy.yml  site.yml
app_python/: .gitignore  Dockerfile  README.md  app.py  requirements-dev.txt  requirements.txt
app_python/docs/: LAB01.md  LAB02.md  LAB03.md
app_python/tests/: test_app.py
app_rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
app_rust/docs/: LAB01.md  LAB02.md  LAB03.md
app_rust/src/: config.rs  main.rs  routes.rs  state.rs
app_rust/src/routes/: health.rs
docs/: LAB04.md
edge-api/: WORKERS.md  wrangler.jsonc
edge-api/src/: index.ts
k8s/: ARGOCD.md  CONFIGMAPS.md  HELM.md  MONITORING.md  README.md  ROLLOUTS.md  SECRETS.md  STATEFULSET.md  deployment.yml  ingress-app2.yml  ingress.yml  service.yml
k8s/argocd/: application-dev.yaml  application-prod.yaml  application.yaml  applicationset.yaml
k8s/common-lib/: Chart.yaml
k8s/python-app/: Chart.yaml  values-bluegreen.yaml  values-canary.yaml  values-dev.yaml  values-monitoring.yaml  values-prod.yaml  values-statefulset.yaml  (+1 more)
labs/: submission18.md
monitoring/: compose.yaml
pulumi/: .gitignore  Pulumi.yaml  README.md  __main__.py  requirements.txt
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+63 files in other folders)
