[package]
name = "devops-info-service"
version = "1.0.0"
edition = "2024"
description = "DevOps course info service"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
const_format = "0.2.35"
dotenvy = "0.15.7"
eyre = "0.6.12"
headers = "0.4.1"
http = "1.4.0"
http-serde = "2.1.1"
jiff = { version = "0.2.18", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.38.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
